# video-edit-workflow-agent

./: .env.example  .gitignore  .gitmodules  CLAUDE.md  Dockerfile  IMPROVEMENTS.md  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
.claude/skills/manim-scene/: SKILL.md
.claude/skills/sandbox-run/: SKILL.md
alembic/: env.py
alembic/versions/: 0001_initial.py
api/: main.py
api/routes/: hitl.py  pipeline.py  projects.py
app/: config.py
app/agents/: __init__.py  manim_codegen.py  market_search.py  registry.py  script.py  spec_judge.py  template_rag.py  visual_qa.py
app/models/: __init__.py  db.py  project.py  video_spec.py
app/orchestration/: celery_app.py  graph.py  tasks.py
app/pipeline/: beat_timing.py  composite.py  render.py  subtitle.py  voiceover.py
app/providers/: base.py  factory.py
app/providers/llm/: anthropic_provider.py  openai_provider.py  openrouter_provider.py
app/providers/stock/: pexels_provider.py
app/providers/tts/: azure_tts_provider.py  edge_tts_provider.py
app/sandbox/: frame_sampler.py  runner.py
app/templates/: __init__.py  base.py  charts.py  functions.py  geometry.py  matrix.py  signal.py  vectors.py
docker/manim-sandbox/: Dockerfile  entrypoint.sh
webui/: app.py  state.py  storage.py
webui/pages/: final_render.py  projects.py  scene_review.py  script_review.py  topic_review.py  workflow.py
