[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "video-edit-workflow-agent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    # Core
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "aiosqlite>=0.19",
    "asyncpg>=0.29",
    # LLM providers
    "openai>=1.0",
    "anthropic>=0.20",
    # TTS
    "edge-tts>=6.1",
    "faster-whisper>=1.0",
    # Media
    "moviepy>=2.0",
    "pillow>=10.0",
    "ffmpeg-python>=0.2",
    # Agents / orchestration
    "langgraph>=0.2",
    "celery[redis]>=5.3",
    "redis>=5.0",
    # Web
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "streamlit>=1.32",
    # Scraping / search
    "arxiv>=2.1",
    "praw>=7.7",
    "httpx>=0.27",
    # Utilities
    "python-dotenv>=1.0",
    "structlog>=24.0",
    "tenacity>=8.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "ruff>=0.4",
    "mypy>=1.9",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
